Fix: Corriger le bug du menu mobile et améliorer les aperçus des projets

--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
             <div class="projects-grid">
                 <!-- AvisGood -->
                 <div class="project-card">
-                    <div class="project-image avisgood"></div>
+                    <div class="project-image avisgood">
+                        <div class="project-preview-overlay">
+                            <div class="preview-icon">⭐</div>
+                            <div class="preview-text">Gestion d'Avis</div>
+                        </div>
+                    </div>
                     <div class="project-content">
                         <h3 class="project-title">AvisGood</h3>
                         <p class="project-description">
@@ -159,7 +164,12 @@
 
                 <!-- SmileEdit -->
                 <div class="project-card">
-                    <div class="project-image smileedit"></div>
+                    <div class="project-image smileedit">
+                        <div class="project-preview-overlay">
+                            <div class="preview-icon">✏️</div>
+                            <div class="preview-text">Éditeur Web</div>
+                        </div>
+                    </div>
                     <div class="project-content">
                         <h3 class="project-title">SmileEdit</h3>
                         <p class="project-description">
@@ -180,7 +190,12 @@
 
                 <!-- AiGengo -->
                 <div class="project-card">
-                    <div class="project-image aigengo"></div>
+                    <div class="project-image aigengo">
+                        <div class="project-preview-overlay">
+                            <div class="preview-icon">🤖</div>
+                            <div class="preview-text">IA Générative</div>
+                        </div>
+                    </div>
                     <div class="project-content">
                         <h3 class="project-title">AiGengo</h3>
                         <p class="project-description">
