Fix: Corriger bug menu hamburger définitif et ajouter images SVG des previews

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 <!-- AvisGood -->
                 <div class="project-card">
                     <div class="project-image avisgood">
+                        <img src="avisgood-preview.svg" alt="AvisGood preview" class="project-preview-img">
                         <div class="project-preview-overlay">
                             <div class="preview-icon">⭐</div>
                             <div class="preview-text">Gestion d'Avis</div>
@@ -165,6 +166,7 @@
                 <!-- SmileEdit -->
                 <div class="project-card">
                     <div class="project-image smileedit">
+                        <img src="smileedit-preview.svg" alt="SmileEdit preview" class="project-preview-img">
                         <div class="project-preview-overlay">
                             <div class="preview-icon">✏️</div>
                             <div class="preview-text">Éditeur Web</div>
@@ -191,6 +193,7 @@
                 <!-- AiGengo -->
                 <div class="project-card">
                     <div class="project-image aigengo">
+                        <img src="aigengo-preview.svg" alt="AiGengo preview" class="project-preview-img">
                         <div class="project-preview-overlay">
                             <div class="preview-icon">🤖</div>
                             <div class="preview-text">IA Générative</div>
