Update: Images previews réalistes et technologies correctes (HTML5/CSS3/JS)

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                             et dashboard analytique en temps réel.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">Node.js</span>
-                            <span class="tech-tag">PostgreSQL</span>
-                            <span class="tech-tag">Docker</span>
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Responsive</span>
                         </div>
                         <a href="https://avisgood.com/" target="_blank" class="project-link">
                             Visiter le site →
@@ -179,10 +179,10 @@
                             et export multiformat.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Vue.js</span>
-                            <span class="tech-tag">Express</span>
-                            <span class="tech-tag">AWS S3</span>
-                            <span class="tech-tag">WebSockets</span>
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Animations</span>
                         </div>
                         <a href="https://smileedit.fr/" target="_blank" class="project-link">
                             Visiter le site →
@@ -206,10 +206,10 @@
                             personnalisé.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">TensorFlow</span>
-                            <span class="tech-tag">Next.js</span>
-                            <span class="tech-tag">Kubernetes</span>
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">API Integration</span>
                         </div>
                         <a href="https://aigengo.com/" target="_blank" class="project-link">
                             Visiter le site →
