Update: Intégrer l'image AiGengo PNG pour les previews

--- a/index.html
+++ b/index.html
@@ -139,30 +139,7 @@
                 <!-- AvisGood -->
                 <div class="project-card">
                     <div class="project-image avisgood">
-                        <svg viewBox="0 0 1200 600" xmlns="http://www.w3.org/2000/svg" class="project-preview-img">
-                            <rect width="1200" height="600" fill="#fafafa"/>
-                            <!-- Header -->
-                            <rect width="1200" height="80" fill="white" stroke="#f0f0f0" stroke-width="1"/>
-                            <text x="40" y="55" font-family="Arial" font-size="28" font-weight="bold" fill="#f39c12">avisgood</text>
-                            <text x="550" y="55" font-family="Arial" font-size="13" fill="#666">About</text>
-                            <text x="700" y="55" font-family="Arial" font-size="13" fill="#666">How it works</text>
-                            <text x="900" y="55" font-family="Arial" font-size="13" fill="#666">Contact</text>
-                            <rect x="1050" y="30" width="130" height="45" rx="22" fill="#f39c12"/>
-                            <text x="1115" y="60" font-family="Arial" font-size="12" font-weight="bold" fill="white" text-anchor="middle">Clients</text>
-                            <!-- Main Content -->
-                            <text x="80" y="180" font-family="Georgia" font-size="52" font-weight="bold" fill="#000">Protect and</text>
-                            <text x="80" y="240" font-family="Georgia" font-size="52" font-weight="bold" fill="#000">Transform Your</text>
-                            <text x="80" y="300" font-family="Georgia" font-size="52" font-weight="bold" fill="#000">Reputation.</text>
-                            <text x="80" y="360" font-family="Arial" font-size="14" fill="#666">Our AI intercepts dissatisfied customers</text>
-                            <text x="80" y="385" font-family="Arial" font-size="14" fill="#666">automatically on all your platforms.</text>
-                            <!-- Stats Cards on Right -->
-                            <rect x="750" y="150" width="380" height="120" rx="12" fill="white" stroke="#f0f0f0" stroke-width="1"/>
-                            <text x="790" y="190" font-family="Arial" font-size="11" fill="#999" font-weight="bold">87%</text>
-                            <text x="790" y="215" font-family="Arial" font-size="11" fill="#999">Negative reviews</text>
-                            <text x="790" y="235" font-family="Arial" font-size="11" fill="#999">prevented</text>
-                            <rect x="950" y="150" width="150" height="120" rx="12" fill="#f39c12" opacity="0.1" stroke="#f39c12" stroke-width="1"/>
-                            <text x="1025" y="220" font-family="Arial" font-size="24" font-weight="bold" fill="#f39c12" text-anchor="middle">+300%</text>
-                        </svg>
+                        <img src="avisgood.png" alt="AvisGood preview" class="project-preview-img">
                         <div class="project-preview-overlay">
                             <div class="preview-icon">⭐</div>
                             <div class="preview-text">Gestion d'Avis</div>
@@ -189,32 +166,7 @@
                 <!-- SmileEdit -->
                 <div class="project-card">
                     <div class="project-image smileedit">
-                        <svg viewBox="0 0 1200 600" xmlns="http://www.w3.org/2000/svg" class="project-preview-img">
-                            <defs>
-                                <linearGradient id="smileBg" x1="0%" y1="0%" x2="100%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#e8d4f1"/>
-                                    <stop offset="100%" style="stop-color:#d4b5e0"/>
-                                </linearGradient>
-                            </defs>
-                            <rect width="1200" height="600" fill="url(#smileBg)"/>
-                            <!-- Header -->
-                            <rect width="1200" height="80" fill="white"/>
-                            <text x="40" y="55" font-family="Georgia" font-size="28" font-weight="bold" fill="#7c5dab">Smile Edit</text>
-                            <text x="620" y="55" font-family="Arial" font-size="12" fill="#333" text-anchor="middle" font-weight="bold">LE STUDIO</text>
-                            <text x="800" y="55" font-family="Arial" font-size="12" fill="#333" text-anchor="middle" font-weight="bold">GALERIE</text>
-                            <text x="970" y="55" font-family="Arial" font-size="12" fill="#333" text-anchor="middle" font-weight="bold">NOS FORMULES</text>
-                            <text x="1100" y="55" font-family="Arial" font-size="12" fill="#333" text-anchor="middle" font-weight="bold">AVIS</text>
-                            <rect x="1070" y="30" width="120" height="45" rx="22" fill="#5b3d9e"/>
-                            <text x="1130" y="60" font-family="Arial" font-size="12" font-weight="bold" fill="white" text-anchor="middle">RÉSERVER</text>
-                            <!-- Location Tag -->
-                            <text x="600" y="130" font-family="Arial" font-size="11" fill="#7c5dab" text-anchor="middle" font-weight="bold">VILLEFRANCHE-SUR-SAÔNE</text>
-                            <!-- Main Title -->
-                            <text x="600" y="250" font-family="Georgia" font-size="56" font-weight="bold" fill="#1a1a1a" text-anchor="middle">Le raffinement commence</text>
-                            <text x="600" y="320" font-family="Georgia" font-size="56" font-style="italic" fill="#1a1a1a" text-anchor="middle">par un sourire.</text>
-                            <!-- Subtitle -->
-                            <text x="600" y="390" font-family="Arial" font-size="14" fill="#555" text-anchor="middle">L'expertise du blanchiment dentaire</text>
-                            <text x="600" y="415" font-family="Arial" font-size="14" fill="#555" text-anchor="middle">dans un cadre d'exception.</text>
-                        </svg>
+                        <img src="smileedit.png" alt="SmileEdit preview" class="project-preview-img">
                         <div class="project-preview-overlay">
                             <div class="preview-icon">✏️</div>
                             <div class="preview-text">Éditeur Web</div>
@@ -241,32 +193,7 @@
                 <!-- AiGengo -->
                 <div class="project-card">
                     <div class="project-image aigengo">
-                        <svg viewBox="0 0 1200 600" xmlns="http://www.w3.org/2000/svg" class="project-preview-img">
-                            <defs>
-                                <linearGradient id="aiBg" x1="0%" y1="0%" x2="100%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#0f0f0f"/>
-                                    <stop offset="100%" style="stop-color:#1a1a1a"/>
-                                </linearGradient>
-                            </defs>
-                            <rect width="1200" height="600" fill="url(#aiBg)"/>
-                            <!-- Header -->
-                            <rect width="1200" height="70" fill="#1a1a1a" stroke="#333" stroke-width="1"/>
-                            <text x="40" y="50" font-family="Arial" font-size="20" font-weight="bold" fill="white">🛡️ AIGENGO.AI</text>
-                            <text x="750" y="50" font-family="Arial" font-size="12" fill="#999" text-anchor="middle" font-weight="bold">EXPERTISES</text>
-                            <text x="900" y="50" font-family="Arial" font-size="12" fill="#999" text-anchor="middle" font-weight="bold">CAS D'USAGE</text>
-                            <text x="1000" y="50" font-family="Arial" font-size="12" fill="#999" text-anchor="middle">EN</text>
-                            <rect x="1070" y="20" width="120" height="45" rx="4" fill="white"/>
-                            <text x="1130" y="50" font-family="Arial" font-size="12" font-weight="bold" fill="#000" text-anchor="middle">DÉMARRER</text>
-                            <!-- Status Badge -->
-                            <circle cx="600" cy="120" r="5" fill="#00ff00"/>
-                            <text x="620" y="125" font-family="Arial" font-size="11" fill="#00ff00" font-weight="bold">SYSTÈMES OPÉRATIONNELS</text>
-                            <!-- Main Title -->
-                            <text x="600" y="260" font-family="Arial" font-size="64" font-weight="bold" fill="white" text-anchor="middle">L'automatisation IA</text>
-                            <text x="600" y="340" font-family="Arial" font-size="64" font-weight="bold" fill="white" text-anchor="middle">nouvelle génération.</text>
-                            <!-- Subtitle -->
-                            <text x="600" y="410" font-family="Arial" font-size="14" fill="#aaa" text-anchor="middle">Déploiement d'architectures d'agents et de solutions IA</text>
-                            <text x="600" y="440" font-family="Arial" font-size="14" fill="#aaa" text-anchor="middle">propriétaires pour scaler vos opérations. Rapide. Sécurisé. Scalable.</text>
-                        </svg>
+                        <img src="aigengo.png" alt="AiGengo preview" class="project-preview-img">
                         <div class="project-preview-overlay">
                             <div class="preview-icon">🤖</div>
                             <div class="preview-text">IA Générative</div>
